--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-macros": "^3.1.0",
     "desandro-matches-selector": "^2.0.2",
     "isotope-layout": "^3.0.6",
+    "jquery": "^3.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
