--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
     "desandro-matches-selector": "^2.0.2",
+    "firebase": "^9.14.0",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
